# LeafletFA

./: .gitignore  404.html  LICENSE  README.md  TODO_NEXT_SESSION.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  slurm-373746.out
.github/workflows/: docs.yml
IsovizPy/: IsovizPy.py  IsovizPy_tutorial.ipynb  IsovizPy_tutorial_human.ipynb  IsovizPy_tutorial_human_github_tutorial.ipynb
Map_ATSEs_Pipeline/: LeafletFA_ATSE_mapping_single_cells_submit_job.py
Model/evals/: full_leafletFA_pipeline_wALBF.py
Model/src/: cost_correlation_assign.py  masking_BBFactor.py
analysis/real_data/: submit_factor_analysis.sh  submit_factor_analysis_withWAYPOINTS.sh  submit_masking_pipeline.sh
analysis/simulation/: check_ALBFs_calibration.ipynb  check_ALBFs_calibration.py  submit_simulation_pipeline_ALBF.sh  summarize_simulations.ipynb
api/differential_splicing/: index.html
api/model/: index.html
api/waypoints/: index.html
data-layer/atsemapper/: index.html
data-layer/splicingdataset/: index.html
docs/: ecosystem.md  index.md
docs/api/: differential_splicing.md  model.md  waypoints.md
docs/data-layer/: atsemapper.md  splicingdataset.md
docs/models/: leafletfa.md  splicevi.md
docs/outputs/: cell-activities.md  differential.md  splicing-programs.md
ecosystem/: index.html
leafletfa/: __init__.py  _ops.py  differential_splicing.py  model.py  utils.py  waypoints.py
leafletfa/analysis_utils/: run_VGLM_BB.R
models/leafletfa/: index.html
notebooks/: quickstart.ipynb
search/: search_index.json
tests/: test_basic.py
(+130 files in other folders)
